add new command

--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
   <section class="bot-commands" id="commands">
     <div class="bot-command-container">
       <div class="bot-command-box">
+        <span>Avisos automáticos</span>
+        <p>Crie uma sala de texto contendo <span>gameko</span> no nome para receber avisos automáticos</p>
+      </div>
+
+      <div class="bot-command-box">
         <span>!gameko-epic</span>
         <p>Use para listar os jogos grátis da Epic Games &#x1F3AE;</p>
       </div>
