--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="bot-info-box reverse">
       <div class="bot-info-text">
         <p class="title">Receba atualizações automáticas</p>
-        <p>você pode criar um canal em seu Discord incluindo <span class="bot-info-text-name">Gameko-Avisos</span> para receber notificações automáticas!</p>
+        <p>você pode criar um canal em seu Discord incluindo <span class="bot-info-text-name">Gameko</span> no nome para receber atualizações automáticas!</p>
       </div>
       <div class="bot-info-img">
         <img src="./assets/images/2.jpg" alt="">
