--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
   <meta property="og:locale" content="pt_BR">
   <meta property="og:url" content="https://skuth.github.io/Gameko-site/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Gameko - Um bot receber jogos gratuitos">
-  <meta property="og:description" content="Gameko, o bot que te avisa quando sai joguinho novo gratuito">
+  <meta property="og:title" content="Gameko - Um bot para receber aviso de jogos gratuitos">
+  <meta property="og:description" content="Gameko, o bot que te avisa quando tem joguinhos gratuitos">
   <meta property="og:image" content="https://skuth.github.io/Gameko-site/assets/images/logo.png">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Gameko - Um bot receber jogos gratuitos">
-  <meta name="twitter:description" content="Gameko, o bot que te avisa quando sai joguinho novo gratuito">
+  <meta name="twitter:title" content="Gameko - Um bot para receber aviso de jogos gratuitos">
+  <meta name="twitter:description" content="Gameko, o bot que te avisa quando tem joguinhos gratuitos">
   <meta name="twitter:image" content="https://skuth.github.io/Gameko-site/assets/images/logo.png">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
