Clear old cache

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css?v=1-05-09-2020">
 
   <meta name="description" content="Gameko, o bot que te avisa quando sai joguinho novo gratuito">
   <meta name="keywords" content="gameko, discord, bot, discord bot, free epicgames, epicgames, epicgames jogos gratis, jogos gratis, pc, steam, origin, uplay, jogos gratis pc">
@@ -141,6 +141,6 @@
     <p>Criado por <span>SKUTH</span></p>
   </footer>
 
-  <script src="./assets/js/script.js"></script>
+  <script src="./assets/js/script.js?v=1-05-09-2020"></script>
 </body>
 </html>
