--- a/index.html
+++ b/index.html
@@ -115,17 +115,17 @@
       </div>
 
       <div class="bot-command-box">
-        <span>!gameko-epic</span>
+        <span>!g-epic</span>
         <p>Use para listar os jogos grátis da Epic Games &#x1F3AE;</p>
       </div>
   
       <div class="bot-command-box">
-        <span>!gameko-avisos</span>
+        <span>!g-avisos</span>
         <p>Use para ativar ou desativar os avisos de jogos gratuitos &#x1F514;</p>
       </div>
   
       <div class="bot-command-box">
-        <span>!gameko-convite</span>
+        <span>!g-convite</span>
         <p>Use para ver meu link de convite	&#x1F517;</p>
       </div>
     </div>
