Make preloader and card animation

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 
 </head>
 <body>
+
+  <div id="preloader">
+    <img src="./assets/images/logo.png" alt="preloader" class="animation">
+  </div>
   
   <nav class="navigation">
     <div class="left">
