Add show on scroll function

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   
   </header>
 
-  <section class="bot-info" id="info">
+  <section class="bot-info hidden" id="info">
     <div class="bot-info-box">
       <div class="bot-info-text">
         <p class="title">Veja os jogos grátis na Epic Games</p>
@@ -111,7 +111,7 @@
     </div>
   </section>
 
-  <section class="bot-commands" id="commands">
+  <section class="bot-commands hidden" id="commands">
     <div class="bot-command-container">
       <div class="bot-command-box">
         <span>Avisos automáticos</span>
