--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="bot-info-box">
       <div class="bot-info-text">
         <p class="title">Veja os jogos grátis na Epic Games</p>
-        <p>Com o Gameko, você pode ver de maneira rápida e fácil os jogos que estão gratuitos na Epic Games, e em breve em outras plataformas!</p>
+        <p>Com o Gameko, você pode ver de maneira rápida e fácil os jogos que estão gratuitos na Epic Games.</p>
       </div>
       <div class="bot-info-img">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"viewBox="0 0 554 598" id="user-card"><defs><style>#user-card .a{fill:#464646;}#user-card .b{fill:url(#a);}#user-card .c,#user-card .e,#user-card .h,#user-card .k{fill:#fff;}#user-card .c,#user-card .l,#user-card .m{font-size:14px;}#user-card .c,#user-card .e,#user-card .j,#user-card .l{font-family:Quicksand-Regular, Quicksand;}#user-card .d,#user-card .i,#user-card .j{fill:#72a6e9;}#user-card .e{font-size:10px;}#user-card .f{fill:#3e3d3d;}#user-card .g{fill:#e23232;}#user-card .h{font-size:12px;}#user-card .h,#user-card .i,#user-card .m{font-family:Quicksand-Bold, Quicksand;font-weight:700;}#user-card .i,#user-card .j{font-size:18px;}#user-card .l,#user-card .m{fill:#d2d2d2;}</style><pattern id="a" preserveAspectRatio="xMidYMid slice" width="100%" height="100%" viewBox="0 0 320 320"><image width="320" height="320" xlink:href="./assets/images/logo.png"/></pattern></defs><g transform="translate(-2655 -730)"><rect class="a" width="554" height="598" rx="10" transform="translate(2655 730)"/><circle class="b" cx="24" cy="24" r="24" transform="translate(2689 753)"/><text class="c" transform="translate(2748 781)"><tspan x="0" y="0">Gameko</tspan></text><rect class="d" width="33" height="16" rx="4" transform="translate(2806 769)"/><text class="e" transform="translate(2813 781)"><tspan x="0" y="0">BOT</tspan></text><g transform="translate(2688.667 861)"><rect class="f" width="486" height="444" rx="4" transform="translate(0.333)"/><path class="g" d="M4,0H6A0,0,0,0,1,6,0V444a0,0,0,0,1,0,0H4a4,4,0,0,1-4-4V4A4,4,0,0,1,4,0Z" transform="translate(0.333)"/></g><g transform="translate(2713.667 875)"><circle class="b" cx="20.5" cy="20.5" r="20.5" transform="translate(0.333)"/><text class="h" transform="translate(51.333 25)"><tspan x="0" y="0">Gameko</tspan></text></g><text class="i" transform="translate(2714 942)"><tspan x="0" y="0">1 - Free Game</tspan></text><text class="j" transform="translate(2689 835)"><tspan x="0" y="0">@user</tspan><tspan class="k" y="0">, Olha essa listinha de jogos grátis</tspan></text><text class="l" transform="translate(2714 969)"><tspan x="0" y="0">Free Game description</tspan></text><text class="m" transform="translate(2714 995)"><tspan x="0" y="0">Preço original</tspan></text><text class="l" transform="translate(2714 1021)"><tspan x="0" y="0">R$ 10,00</tspan></text><rect class="a" width="96" height="124" rx="10" transform="translate(3057 875)"/><rect class="a" width="439" height="209" rx="10" transform="translate(2714 1050)"/><text class="l" transform="translate(2714 1288)"><tspan x="0" y="0">Jogo grátis até dia 01/01/2021 | 12:00</tspan></text></g></svg>
@@ -101,6 +101,16 @@
     </div>
 
     <div class="bot-info-box reverse">
+      <div class="bot-info-text">
+        <p class="title">Veja os jogos grátis ou em promoção na Steam</p>
+        <p>Com o Gameko, você pode ver de maneira rápida e fácil os jogos que estão gratuitos ou em promoção na Steam.</p>
+      </div>
+      <div class="bot-info-img">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"viewBox="0 0 554 598" id="user-card"><defs><style>#user-card .a{fill:#464646;}#user-card .b{fill:url(#a);}#user-card .c,#user-card .e,#user-card .h,#user-card .k{fill:#fff;}#user-card .c,#user-card .l,#user-card .m{font-size:14px;}#user-card .c,#user-card .e,#user-card .j,#user-card .l{font-family:Quicksand-Regular, Quicksand;}#user-card .d,#user-card .i,#user-card .j{fill:#72a6e9;}#user-card .e{font-size:10px;}#user-card .f{fill:#3e3d3d;}#user-card .g{fill:#e23232;}#user-card .h{font-size:12px;}#user-card .h,#user-card .i,#user-card .m{font-family:Quicksand-Bold, Quicksand;font-weight:700;}#user-card .i,#user-card .j{font-size:18px;}#user-card .l,#user-card .m{fill:#d2d2d2;}</style><pattern id="a" preserveAspectRatio="xMidYMid slice" width="100%" height="100%" viewBox="0 0 320 320"><image width="320" height="320" xlink:href="./assets/images/logo.png"/></pattern></defs><g transform="translate(-2655 -730)"><rect class="a" width="554" height="598" rx="10" transform="translate(2655 730)"/><circle class="b" cx="24" cy="24" r="24" transform="translate(2689 753)"/><text class="c" transform="translate(2748 781)"><tspan x="0" y="0">Gameko</tspan></text><rect class="d" width="33" height="16" rx="4" transform="translate(2806 769)"/><text class="e" transform="translate(2813 781)"><tspan x="0" y="0">BOT</tspan></text><g transform="translate(2688.667 861)"><rect class="f" width="486" height="444" rx="4" transform="translate(0.333)"/><path class="g" d="M4,0H6A0,0,0,0,1,6,0V444a0,0,0,0,1,0,0H4a4,4,0,0,1-4-4V4A4,4,0,0,1,4,0Z" transform="translate(0.333)"/></g><g transform="translate(2713.667 875)"><circle class="b" cx="20.5" cy="20.5" r="20.5" transform="translate(0.333)"/><text class="h" transform="translate(51.333 25)"><tspan x="0" y="0">Gameko</tspan></text></g><text class="i" transform="translate(2714 942)"><tspan x="0" y="0">1 - Free Game</tspan></text><text class="j" transform="translate(2689 835)"><tspan x="0" y="0">@user</tspan><tspan class="k" y="0">, Olha essa listinha de jogos grátis</tspan></text><text class="l" transform="translate(2714 969)"><tspan x="0" y="0">Free Game description</tspan></text><text class="m" transform="translate(2714 995)"><tspan x="0" y="0">Preço original</tspan></text><text class="l" transform="translate(2714 1021)"><tspan x="0" y="0">R$ 10,00</tspan></text><rect class="a" width="96" height="124" rx="10" transform="translate(3057 875)"/><rect class="a" width="439" height="209" rx="10" transform="translate(2714 1050)"/><text class="l" transform="translate(2714 1288)"><tspan x="0" y="0">Jogo grátis até dia 01/01/2021 | 12:00</tspan></text></g></svg>
+      </div>
+    </div>
+
+    <div class="bot-info-box">
       <div class="bot-info-text">
         <p class="title">Receba atualizações automáticas</p>
         <p>você pode criar um canal em seu Discord incluindo <span class="bot-info-text-name">Gameko</span> no nome para receber atualizações automáticas!</p>
@@ -122,6 +132,17 @@
         <span>!g-epic</span>
         <p>Use para listar os jogos grátis da Epic Games &#x1F3AE;</p>
       </div>
+
+      <div class="bot-command-box">
+        <span>!g-steam</span>
+        <p>Use para listar os jogos grátis na Steam &#x1F3AE;</p>
+      </div>
+
+      <div class="bot-command-box">
+        <span>!g-steam-d</span>
+        <p>Use para listar os jogos em promoção na Steam &#x1F3AE;</p>
+      </div>
+
   
       <div class="bot-command-box">
         <span>!g-avisos</span>
