--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <li><a onclick="scrollWindow('info')">Sobre</a></li>
         <li><a onclick="scrollWindow('commands')">Comandos</a></li>
       </ul>
-      <a href="https://discord.com/oauth2/authorize?client_id=738204726218194964&permissions=268552256&scope=bot" class="btn" target="_blank"><i class="fab fa-discord mr"></i> Adicionar ao Discord</a>
+      <a href="https://discord.com/oauth2/authorize?client_id=738204726218194964&permissions=8&scope=bot" class="btn" target="_blank"><i class="fab fa-discord mr"></i> Adicionar ao Discord</a>
     </div>
   </nav>
 
@@ -74,7 +74,7 @@
           <span>Me adiciona no seu discord e eu te aviso sempre que tiver!</span>
         
           <div class="btn-container">
-            <a href="https://discord.com/oauth2/authorize?client_id=738204726218194964&permissions=268552256&scope=bot" class="btn btn-md" target="_blank"><i class="fab fa-discord mr"></i> Adicionar ao Discord</a>
+            <a href="https://discord.com/oauth2/authorize?client_id=738204726218194964&permissions=8&scope=bot" class="btn btn-md" target="_blank"><i class="fab fa-discord mr"></i> Adicionar ao Discord</a>
             <a onclick="scrollWindow('commands')" class="btn btn-md btn-invert">Ver comandos</a>
           </div>
         </div>
@@ -159,7 +159,7 @@
   <section class="bot-button">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" id="wave"><path fill-opacity="1" d="M0,96L60,117.3C120,139,240,181,360,170.7C480,160,600,96,720,106.7C840,117,960,203,1080,208C1200,213,1320,139,1380,101.3L1440,64L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg>
     <span>Me adicione no seu discord!</span>
-    <a href="https://discord.com/oauth2/authorize?client_id=738204726218194964&permissions=268552256&scope=bot" class="btn" target="_blank"><i class="fab fa-discord mr"></i> Adicionar ao Discord</a>
+    <a href="https://discord.com/oauth2/authorize?client_id=738204726218194964&permissions=8&scope=bot" class="btn" target="_blank"><i class="fab fa-discord mr"></i> Adicionar ao Discord</a>
   </section>
 
   <footer class="footer">
